--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-lg-8  offset-lg-2">
             <h3 class="mt-5">Live Streaming</h3>
-            <img src="http://127.0.0.1:8000/video/stream" width="50%">
+            <img src="http://localhost:8000/video/stream" width="50%">
         </div>
     </div>
 </div> 
